# enterprise-rag-platform

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  prd.md  pyproject.toml
data/: tenants.yaml
data/documents/: manifest.yaml
data/documents/acme-corp/: 2026-reorg-plan.md  employee-handbook.md  q3-financial-results-draft.md  vendor-notice-injection.md  vpn-password-policy.md
data/documents/globex-inc/: clinical-trial-results-confidential.md  employee-handbook.md  executive-merger-plan.md  patient-data-handling-policy.md
data/documents/initech/: employee-handbook.md  org-restructuring-plan-confidential.md  vpn-remote-access-policy.md
deploy/chroma/: docker-compose.yml
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/components/: AccessContextPanel.tsx  AnswerPanel.tsx  AuditEventsTable.tsx  InjectionScanBanner.tsx  MermaidDiagram.tsx  NavBar.tsx  RetrievedChunksTable.tsx  UserCard.tsx  ValidationBanner.tsx
frontend/src/context/: UserContext.tsx
frontend/src/pages/: ArchitecturePage.tsx  AskPage.tsx  AuditLogPage.tsx  DocumentsPage.tsx  UserPickerPage.tsx
frontend/src/services/: auditApi.ts  documentsApi.ts  queryApi.ts  usersApi.ts
frontend/src/types/: audit.ts  document.ts  query.ts  user.ts
frontend/tests/: ArchitecturePage.test.tsx  AskPage.test.tsx  AuditLogPage.test.tsx  DocumentsPage.test.tsx  UserPickerPage.test.tsx
src/rag_platform/: bootstrap.py  config.py  logging_config.py  main.py
src/rag_platform/api/: app.py  auth.py  deps.py  schemas.py
src/rag_platform/api/routers/: audit.py  documents.py  query.py  router.py  users.py
src/rag_platform/generation/: answer_service.py  prompt_builder.py
src/rag_platform/ingestion/: chunker.py  loaders.py  pipeline.py  quarantine.py
src/rag_platform/models/: chunk.py  document.py  enums.py  query.py  tenant.py
src/rag_platform/providers/: embeddings.py  llm.py  vector_store.py
src/rag_platform/retrieval/: authz.py  retriever.py
src/rag_platform/security/: audit_log.py  output_validation.py  prompt_injection.py
src/rag_platform/tenancy/: registry.py
tests/: conftest.py  test_acl_classification.py  test_api.py  test_api_documents.py  test_audit_log.py  test_auth_middleware.py  test_chunker.py  test_demo_e2e.py  test_output_validation.py  test_prompt_injection_ingest.py  test_prompt_injection_query.py  test_tenant_isolation.py
