[project]
name = "rag-platform"
version = "0.1.0"
description = "Practice implementation of a multi-tenant, security-first RAG platform (mock data, pluggable local/OpenAI/Anthropic/Vertex AI providers)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "chromadb>=0.5.20",
    "fastapi>=0.115.0",
    "google-genai>=1.0.0",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pypdf>=5.1.0",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.2",
    "rich>=14.3.3",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.34.0",
]

# sentence-transformers (needed only for EMBEDDING_PROVIDER=local) pulls in
# torch + a full CUDA toolchain transitively — ~1GB+ and most of a 5.4GB
# Docker image, none of it used by the openai/anthropic/vertex providers.
# Opt in with `uv sync --extra local-embeddings` if you want that provider.
[project.optional-dependencies]
local-embeddings = ["sentence-transformers>=3.3.1"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.3.4",
    "ruff>=0.15.8",
]

[project.scripts]
rag = "rag_platform.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rag_platform"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["rag_platform"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: tests that call real OpenAI/Anthropic/Vertex AI APIs (opt-in, env-gated)",
]
